[project]
name = "sommelier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "absl-py==2.3.1",
    "accelerate==1.9.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "alembic==1.16.4",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.9.0",
    "asteroid-filterbanks==0.4.0",
    "asttokens>=3.0.1",
    "async-timeout==5.0.1",
    "attrs==25.3.0",
    "audioread==3.0.1",
    "av==15.0.0",
    "backports-datetime-fromisoformat==2.0.3",
    "bitsandbytes==0.46.0",
    "braceexpand==0.1.7",
    "brotli==1.1.0",
    "certifi==2025.7.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpickle==3.1.1",
    "coloredlogs==15.0.1",
    "colorlog==6.9.0",
    "comm>=0.2.3",
    "contourpy==1.3.2",
    "ctranslate2==4.4.0",
    "cycler==0.12.1",
    "cython==3.1.2",
    "cytoolz==1.0.1",
    "datasets==4.0.0",
    "debugpy>=1.8.20",
    "decorator>=5.2.1",
    "demucs==4.0.1",
    "dill==0.3.8",
    "distro==1.9.0",
    "docopt==0.6.2",
    "editdistance==0.8.1",
    "einops==0.8.1",
    "entrypoints>=0.4",
    "exceptiongroup>=1.3.1",
    "executing>=2.2.1",
    "faster-whisper==1.1.1",
    "fiddle==0.3.0",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fonttools==4.59.0",
    "frozenlist==1.7.0",
    "fsspec==2024.12.0",
    "future==1.0.0",
    "g2pk>=0.9.4",
    "gevent==25.5.1",
    "geventhttpclient==2.3.4",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "graphviz==0.21",
    "greenlet==3.2.3",
    "grpcio==1.67.1",
    "h11==0.16.0",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.33.4",
    "humanfriendly==10.0",
    "hydra-core==1.3.2",
    "hyperpyyaml==1.2.2",
    "idna==3.10",
    "indic-numtowords==1.0.2",
    "inflect==7.5.0",
    "intervaltree==3.1.0",
    "ipykernel>=7.2.0",
    "ipython>=8.39.0",
    "jedi>=0.19.2",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jiwer==3.1.0",
    "joblib==1.5.1",
    "julius==0.2.7",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "kaldi-python-io==1.2.2",
    "kaldialign>=0.9.3",
    "kiwisolver==1.4.8",
    "lazy-loader==0.4",
    "levenshtein==0.27.1",
    "lhotse==1.30.3",
    "libcst==1.8.2",
    "librosa==0.11.0",
    "lightning==2.4.0",
    "lightning-utilities==0.14.3",
    "lilcom==1.8.1",
    "llvmlite==0.44.0",
    "loguru==0.7.3",
    "mako==1.3.10",
    "markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==4.0.0",
    "matplotlib==3.10.3",
    "matplotlib-inline>=0.2.1",
    "mdurl==0.1.2",
    "mediapy==1.1.6",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "msgpack==1.1.1",
    "multidict==6.6.3",
    "multiprocess==0.70.16",
    "nemo-toolkit[all]==2.5.3",
    "nest-asyncio>=1.6.0",
    "networkx==3.4.2",
    "ninja==1.11.1.1",
    "nltk==3.9.1",
    "num2words==0.5.14",
    "numba==0.61.2",
    "numpy",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "omegaconf==2.3.0",
    "onnx>=1.21.0",
    "onnxruntime<1.24.0",
    "onnxruntime-gpu<1.24.0",
    "openai==1.97.1",
    "optuna==4.4.0",
    "orjson==3.11.0",
    "packaging==24.2",
    "pandas==2.3.1",
    "panns-inference>=0.1.1",
    "parso>=0.8.6",
    "peft==0.16.0",
    "pexpect>=4.9.0",
    "pickleshare>=0.7.5",
    "pillow==11.3.0",
    "plac==1.4.5",
    "platformdirs>=4.9.6",
    "pooch==1.8.2",
    "primepy==1.3",
    "prompt-toolkit>=3.0.52",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "psutil>=7.2.2",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyannote-audio==3.3.2",
    "pyannote-core==5.0.0",
    "pyannote-database==5.1.3",
    "pyannote-metrics==3.2.1",
    "pyannote-pipeline==3.0.1",
    "pyarrow==21.0.0",
    "pybind11==3.0.0",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydub==0.25.1",
    "pygments>=2.20.0",
    "pyloudnorm==0.1.1",
    "pyparsing==3.2.3",
    "python-dateutil>=2.9.0.post0",
    "python-rapidjson==1.21",
    "pytorch-lightning==2.5.2",
    "pytorch-metric-learning==2.8.1",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq>=27.1.0",
    "rapidfuzz==3.13.0",
    "regex==2024.11.6",
    "requests==2.32.4",
    "reretry==0.11.8",
    "resampy==0.4.3",
    "rich==14.0.0",
    "ruamel-yaml==0.18.14",
    "ruamel-yaml-clib==0.2.12",
    "sacrebleu>=2.6.0",
    "sacremoses==0.1.1",
    "safetensors==0.5.3",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "semver==3.0.4",
    "sentencepiece==0.2.0",
    "sentry-sdk==2.33.2",
    "shellingham==1.5.4",
    "six>=1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "sortedcontainers==2.4.0",
    "soundfile==0.13.1",
    "sox==1.5.0",
    "soxr==0.5.0.post1",
    "speechbrain==1.0.3",
    "sqlalchemy==2.0.41",
    "stack-data>=0.6.3",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorboardx==2.6.4",
    "termcolor==3.1.0",
    "text-unidecode==1.3",
    "texterrors==0.5.1",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.2",
    "tomli==2.2.1",
    "toolz==1.0.0",
    "torch==2.7.1",
    "torch-audiomentations==0.12.0",
    "torch-pitch-shift==1.2.5",
    "torchaudio==2.7.1",
    "torchmetrics==1.7.4",
    "tornado>=6.5.5",
    "tqdm==4.67.1",
    "traitlets>=5.14.3",
    "transformers",
    "triton==3.3.1",
    "tritonclient==2.59.0",
    "tritony==0.0.20",
    "typeguard==4.4.4",
    "typer==0.16.0",
    "typing-extensions>=4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "wandb==0.21.0",
    "wcwidth>=0.6.0",
    "webdataset==1.0.2",
    "werkzeug==3.1.3",
    "wget==3.2",
    "whisper-normalizer==0.1.12",
    "whisperx==3.4.2",
    "wrapt==1.17.2",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zope-event==5.1.1",
    "zope-interface==7.2",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[tool.uv.extra-build-dependencies]
mamba-ssm = ["torch"]

[tool.uv]
no-build-isolation-package = ["mamba-ssm", "causal-conv1d"]
override-dependencies = [
    "numpy==1.26.4",
    "urllib3<2",
    "nvidia-resiliency-ext<0.5.0"
]
